- iOS dropdown shadow fixes - Validation added for infant passenger

--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -52,6 +52,7 @@
     <Color x:Key="LightGray">#E0E0E0</Color>
     <Color x:Key="BackgroundColor">#F5F5F5</Color>
     <Color x:Key="AshtonSkies">#7b8eb0</Color>
+    <Color x:Key="BorderColor">#DADADA</Color>
 
     <!-- ==================== -->
     <!--   DARK THEME COLORS  -->
